kubernetes/laravel-echo-server.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-echo-server
  namespace: webhook
  labels:
    app: laravel-echo-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy: {}
  selector:
    matchLabels:
        app: laravel-echo-server
  template:
    metadata:
        labels:
          app: laravel-echo-server
    spec:
      containers:
      - image: webhooksite/laravel-echo-server
        name: laravel-echo-server
        ports:
        - protocol: TCP
          containerPort: 6001
        resources: {}
      restartPolicy: Always
status: {}
