kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: webhook
spec:
  ports:
  - name: "8084"
    port: 8084
    targetPort: 80
  selector:
    app: webhook
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: webhook
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-echo-server
  namespace: webhook
spec:
  selector:
    app: laravel-echo-server
  ports:
  - port: 6001
    targetPort: 6001
