kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook
  namespace: webhook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webhook.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook
            port: 
              number: 8084
